WebVR: Ensure loading indicator starts hidden.

The element started out with enabled=false and default visible=true,
the visibility was intended to be set to false on initializing,
but that setting was skipped since the new enabled state was equal
to the starting enabled state.

To fix this, explicitly set the starting visibility to false.

BUG=723959

Review-Url: https://codereview.chromium.org/2893853002
Cr-Commit-Position: refs/heads/master@{#472878}

Former-commit-id: 66af134f170e3f6f217c826ede85791151011147